--- a/StrikingInvestigation/Pages/Index.razor
+++ b/StrikingInvestigation/Pages/Index.razor
@@ -6,65 +6,76 @@
     <br />
 
     <p style="max-width: 800px">
-        This website lets ringers specify when their bell should strike following a series of blows with
-        striking errors.
-        The aim is to determine whether ringers generally agree on the correct point in time to strike a bell
-        when the preceding blows are not evenly struck.
+        The aim of this website is to collect striking data from the method ringing community in order to investigate
+        whether there is a general purpose algorithm for measuring how accurately a bell has been struck,
+        even when the preceding blows are not evenly struck.
     </p>
 
     <p style="max-width: 800px">
-        There are also two other tests:
-    </p>
-
-    <ul style="max-width: 800px">
-        <li class="mb-3">
-            An A/B test to determine how small a striking error ringers can detect; and
-        </li>
-
-        <li>
-            An A/V test to see if ringers respond to audio and visual cues in the same way.
-        </li>
-    </ul>
-
-    <br />
-
-    <p style="max-width: 800px">
-        <u>Select Gap:</u> This allows a user to create a block of rows with random striking errors,
-        and then specify where their bell (the last bell) should strike.
+        There are three types of test on this website:
     </p>
 
     <br />
 
     <p style="max-width: 800px">
-        <u>A/B Test:</u> The same block of rows is played twice, once with errors and once without.
-        The user attempts to detect which block has the errors.
+        <u>Gap Test:</u> In this test, the user is played a sequence of blows that have striking errors,
+        and the user then specifies when they think the last bell should strike.
+        The purpose of this test is to determine whether ringers generally agree on when a bell should strike
+        when there are earlier striking errors.
     </p>
 
     <br />
 
     <p style="max-width: 800px">
-        <u>A/V Test:</u> A bell will be heard to strike, and a visual representation of the strike
-        will appear on the screen. The user adjusts the position of the bell on the screen until
-        the audio and visual components are sensed at the same time.
+        <u>A/B Test:</u> In this test, the same block of rows is played twice, once with striking errors and
+        once without.
+        The user is asked which block has the errors.
+        The purpose of this test is to determine how small a striking error can be detected by ringers.
     </p>
 
     <br />
 
     <p style="max-width: 800px">
-        <u>Submissions:</u> Not yet implemented. This page will show striking result data that the user has submitted
-        to the central server.
+        <u>A/V Test:</u> In this test, a bell will be heard to strike, and a visual representation of the strike
+        will appear on the screen.
+        The user adjusts the position of the bell on the screen until they think the audio and visual components
+        are occurring at the same time.
+        The purpose of this test is to see if ringers respond to audio and visual cues in the same way.
     </p>
 
     <br />
 
     <p style="max-width: 800px">
-        <u>Privacy:</u> Not yet implemented. This page will explain how striking result data submitted
-        to the central server will be used, and how the user's privacy will be protected.
+        In all three cases above, there are predefined tests that are selected from a drop-down list.
+        After running a test, the user can click a button to submit their response to a central server for
+        aggregation and analysis.
+        The drop-down list also includes a 'Practice' item; this is to let the user try out a test
+        and see how it works.
+        Nothing is submitted to the central server when a practice test is selected.
     </p>
 
     <br />
 
     <p style="max-width: 800px">
-        <u>Account:</u> Not yet implemented. This page will be where users log in and maintain their accounts.
+        <u>Submissions:</u> This page show the test results that the user has submitted to the central server.
+        <i>
+            At present, all submissions are shown. This page will be made user-specific once login functionality
+            has been added to this website.
+        </i>
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>Privacy:</u> This page explains how test data submitted to the central server will be used,
+        and how users' privacy will be protected.
+        <i>Not yet implemented.</i>
+    </p>
+
+    <br />
+
+    <p style="max-width: 800px">
+        <u>Account:</u> This page is where users log in and maintain their accounts.
+        <i>Not yet implemented.</i>
     </p>
 </div>
