--- a/StrikingInvestigation/Pages/Submissions.razor
+++ b/StrikingInvestigation/Pages/Submissions.razor
@@ -11,6 +11,11 @@
         any of the submissions below, run the test again and your new submission will replace what is below.
     </p>
 
+    <p>
+        <i>Note: At present all submissions for all users are shown below. The statement above will be
+        implemented once login functionality is added.</i>
+    </p>
+
     <br />
 
     @if (TestSubmissions == null)
