--- a/StrikingInvestigation/Pages/Index.razor
+++ b/StrikingInvestigation/Pages/Index.razor
@@ -8,7 +8,7 @@
     <p style="max-width: 800px">
         The aim of this website is to collect striking data from the method ringing community in order to investigate
         whether there is a general purpose algorithm for measuring how accurately a bell has been struck,
-        even when the preceding blows are not evenly struck.
+        including when the preceding blows are not evenly struck.
     </p>
 
     <p style="max-width: 800px">
